--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dev": "nodemon index.js"
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.14.0",
     "morgan": "^1.7.0",
     "passport": "^0.3.2",
