--- a/package.json
+++ b/package.json
@@ -5,16 +5,19 @@
   "author": "",
   "license": "ISC",
   "engines": {
-    "node": ">=6.9.1"
+    "node": ">=8.9.4"
   },
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "test": "./node_modules/.bin/mocha tests/**/*.js",
+    "build": "nyc --reporter=cobertura --reporter=html ./node_modules/.bin/mocha tests/**/*.js --reporter mocha-junit-reporter --reporter-options mochaFile=./TEST-RESULTS.xml"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.14.0",
     "morgan": "^1.7.0",
+    "nyc": "^15.1.0",
     "passport": "^0.3.2",
     "passport-azure-ad": "^4.2.1"
   },
@@ -34,6 +37,11 @@
   },
   "homepage": "https://github.com/Azure-Samples/active-directory-javascript-nodejs-webapi-v2#readme",
   "devDependencies": {
+    "gulp": "^4.0.2",
+    "gulp-istanbul": "^1.1.3",
+    "gulp-mocha": "^7.0.2",
+    "mocha": "^8.0.1",
+    "mocha-junit-reporter": "^2.0.0",
     "nodemon": "^2.0.2"
   }
 }
