--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "morgan": "^1.7.0",
     "nyc": "^15.1.0",
     "passport": "^0.3.2",
-    "passport-azure-ad": "^4.2.1"
+    "passport-azure-ad": "^4.2.1",
+    "swagger-jsdoc": "^4.0.0",
+    "swagger-ui-express": "^4.1.4"
   },
   "main": "index.js",
   "repository": {
